--- a/package.json
+++ b/package.json
@@ -1,35 +1,43 @@
 {
-  "name": "react-images-upload-demo",
-  "version": "0.2.0",
-  "private": true,
+  "name": "react-images-upload",
+  "version": "1.1.0",
+  "private": false,
+  "main": "compiled.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/jakehartnell/react-images-upload"
   },
   "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-flip-move": "^3.0.1",
-    "react-scripts": "1.1.4",
-    "react-syntax-highlighter": "^7.0.4"
+    "react": "^16.2.0",
+    "react-flip-move": "^3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "prepublishOnly": "npm run transpile",
+    "transpile": "babel index.js --out-file compiled.js"
+  },
+  "babel": {
+    "presets": [
+      "env",
+      "react",
+      "stage-2"
+    ]
+  },
+  "keywords": [
+    "image",
+    "upload",
+    "file",
+    "react image upload"
+  ],
+  "license": "MIT",
+  "peerDependencies": {
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
+    "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4"
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1"
   }
 }
